# Morpheus-Zeus-V4-Old

./: .gitignore  README.md  pyproject.toml
resources/: common.resource  fiber.resource
resources/pages/dashboard/: system_card.resource
resources/pages/first_access/: first_access.resource
resources/pages/login/: login.resource
resources/pages/network/: captive_portal.resource  dhcp.resource  lan.resource  operation_mode.resource  qos.resource
resources/pages/security/: firewall.resource
resources/pages/services/: discovery.resource  ntp.resource  snmp.resource  watchdog.resource
resources/pages/system/: backup_and_restore.resource  log.resource  management.resource  update.resource
resources/pages/wireless/: advanced_wireless.resource  wireless_radio_2ghz.resource  wireless_radio_5ghz.resource  wireless_site_survey.resource  wireless_ssid.resource
tests/dashboard/system_card/: portuguese.robot
tests/first_access/: common.robot  english.robot  portuguese.robot  spanish.robot
tests/login/: common.robot  portuguese.robot
tests/network/captive_portal/: portuguese.robot
tests/network/dhcp/: portuguese.robot
tests/network/lan/: english.robot  portuguese.robot  spanish.robot
tests/network/operation mode/: english.robot  portuguese.robot  spanish.robot
tests/network/qos/: portuguese.robot
tests/security/firewall/: portuguese.robot
tests/services/discovery/: portuguese.robot
tests/services/ntp/: english.robot  portuguese.robot  spanish.robot
tests/services/snmp/: english.robot  portuguese.robot  spanish.robot
(+24 files in other folders)
